--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "lucide-react": "^0.437.0",
+    "lucide-react": "^0.441.0",
     "next": "14.2.7",
     "react": "^18",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18"
   },
   "devDependencies": {
